<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_image"
    tools:context=".View.DaftarActivity">
    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/transparan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textSize="25sp"
                android:textColor="@color/lightgray"
                android:textStyle="bold"
                android:padding="10dp" />
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="10dp">
            <EditText
                android:id="@+id/isinama"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:hint="@string/nama"
                android:background="@color/transparan"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:padding="10dp">
            <EditText
                android:id="@+id/isitlp"
                android:layout_width="300dp"
                android:hint="@string/tlp"
                android:layout_height="35dp"
                android:background="@color/transparan"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:padding="10dp">
            <EditText
                android:id="@+id/isialamat"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:hint="@string/alamat"
                android:background="@color/transparan"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:text="@string/header_sesi"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:textColor="@color/lightgray"
                android:layout_marginLeft="105dp"
                android:text="@string/header_tgl"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:gravity="center"
            android:padding="10dp">

            <Spinner
                android:id="@+id/sesi"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:entries="@array/sesi"
                android:background="@color/transparan"
                android:singleLine="true"
                android:spinnerMode="dialog"></Spinner>
            <EditText
                android:id="@+id/txt_tanggal"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginLeft="29dp"
                android:background="@color/transparan"
                android:inputType="date"
                android:textAlignment="center"
                android:hint="@string/tgl"/>
            <Button
                android:id="@+id/pil_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/date"
                android:layout_marginLeft="7dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:gravity="center"
            android:padding="10dp">
            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/btn_daftar"
                android:textColor="@color/lightgray"
                android:textStyle="italic"
                android:background="@color/btn_daftar"
                android:layout_marginRight="5dp"/>
            <Button
                android:id="@+id/btn_batal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textColor="@color/lightgray"
                android:text="@string/btn_batal"
                android:textStyle="italic"
                android:background="@color/btn_batal"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>